# robotArm

./: .gitignore  gripper2.stl
ArduinoRobotArm/: ArduinoRobotArm.ino
ArduinoRobotArmPatchwork/: ArduinoRobotArmPatchwork.ino
PythonRobotArm/: .gitignore  calculation.py  file_hasher.py  ino_builder.py  interactive_calc3d.py
pc_cpp/: .gitignore  CMakeLists.txt  build_lib.sh  generate_preprocessor_output.sh  main.cpp  robotArm.cpp
pc_cpp/PythonRobotArm/: interactive_calc3d.py
pc_cpp/h/: Point3d.hpp  Point3dLinkNode.hpp  Rotation3d.hpp  ServoState.hpp  constants.hpp  coupling.hpp  libRobotArm.hpp  ramp3d.hpp  util.hpp  utils.hpp
pc_cpp/pc_cpp/: codeDescription.md
pc_cpp/serialLinux/: serialLinux.cpp
pc_cpp/serialWindows/: serialPort.cpp  serialPort.hpp
pc_cpp/src/: Point3d.cpp  Point3dLinkNode.cpp  Rotation3d.cpp  ServoState.cpp  coupling.cpp  libRobotArm.cpp  main.cpp  ramp3d.cpp  util.cpp  utils.cpp
robotarmtesting/: robotarmtesting.ino
